# revolt-examples

./: .env.example  .gitignore  pyproject.toml
.devcontainer/: .p10k.zsh  devcontainer.json  setup.sh
compiled_contracts/: approval.teal
corso_tracciabilita/: env_parameters.py  main.py  utils.py
corso_tracciabilita/contracts/: atm.py  contract.py
tests/: test_corso_tracciabilita.py
